--- a/src/interface/templates/questionnaire/questionnaire.html
+++ b/src/interface/templates/questionnaire/questionnaire.html
@@ -79,7 +79,8 @@
 
                     'display_vote': '{{ qst.display_vote }}',
                     'ip_times': '{{ qst.ip_times }}',
-                    'day_times': '{{ qst.day_times }}'
+                    'day_times': '{{ qst.day_times }}',
+                    'fillin_check': '{{ qst.check }}'
 
                 }
             //    alert("fillin_id: " + "{{ fillin_id }}" + '.');
