--- a/src/interface/templates/questionnaire/publish_qst/multi.html
+++ b/src/interface/templates/questionnaire/publish_qst/multi.html
@@ -8,7 +8,8 @@
     <div id="checkbox-list">
         <div class="checkbox" >
             <label>
-            <input type="checkbox" name="qst{{ questions_id }}" id="optionsCheckbox1" value="option1" class="form-control">
+            <input type="checkbox" name="qst{{ questions_id }}" id="optionsCheckbox1" value="option1" class="form-control"
+                    onifChecked="test();">
                 <label for="this.prev();">选项 1</label>
             </label>
         </div>
@@ -21,8 +22,11 @@
         </div>
     </div>
     <textarea name="qst{{ questions_id }}" class="form-control"
-                      style="resize: vertical; width: 5%; opacity: ; position: absolute; z-index: 10;"
+                      style="resize: vertical; width: 5%; opacity: 0; position: absolute; z-index: 10;"
                       rows="1" required disabled>123</textarea>
+    <input name="max_selected" value="{{ max_selected }}" type="text" style="display: none;">
+    <input name="min_selected" value="{{ min_selected }}" type="text" style="display: none;">
+    <input name="qst_must" value="{{ qst_must }}" type="text" style="display: none;">
 
     <script>
 
@@ -43,14 +47,16 @@
             var select_hint = source_panel_body.find("#select_hint");
             if('{{min_selected}}' == 'None' || '{{min_selected}}' == '') {
 
-                if('{{max_selected}}' != 'None' && '{{max_selected}}' != '')
+                if('{{max_selected}}' != 'None' && '{{max_selected}}' != '') {
                     select_hint.html("&nbsp;[最多选择" + '{{max_selected}}' + "项]");
+                }
             }
             else {
                 source_panel_body.find("textarea[name='qst{{ questions_id }}']").html('');
                 source_panel_body.find("textarea[name='qst{{ questions_id }}']").attr('disabled', false);
-                if('{{max_selected}}' != 'None' && '{{max_selected}}' != '')
+                if('{{max_selected}}' != 'None' && '{{max_selected}}' != '') {
                     select_hint.html("&nbsp;[请选择" + '{{min_selected}}' + " - " + '{{max_selected}}' + "项]");
+                } 
                 else
                     select_hint.html("&nbsp;[至少选择" + '{{min_selected}}' + "项]")
             }
@@ -102,13 +108,6 @@
 
             }
 
-            source_panel_body.find("input[name='qst{{ questions_id }}']").click(function() {
-                alert("!!!");
-
-
-            });
-
-
 
             //加载选框样式
             $('input').iCheck({
@@ -117,37 +116,62 @@
               increaseArea: '20%'
             });
 
-            $('input').on('ifChecked', function(event){
-               // alert('qst{{ questions_id }}');
-                if('{{max_selected}}' != 'None' && '{{max_selected}}' != '') {
+            $("input").on('ifChecked', function(event){
+               
+                var source_panel_body = $(this).parent().parent().parent().parent().parent();
+                var min_selected = source_panel_body.find("input[name='min_selected']").val();
+                var max_selected = source_panel_body.find("input[name='max_selected']").val();
+                var qst_must = source_panel_body.find("input[name='qst_must']").val();
+                if (min_selected == 'None' || min_selected == '')
+                    min_selected = 0;
+                if (max_selected == 'None' || max_selected == '')
+                    max_selected = 1000;
+                if(qst_must == 'true')
+                    min_selected = 1;
+
+                var checked_num = source_panel_body.find("input[type='checkbox']:checked").length;
+                if(checked_num < max_selected && checked_num >= min_selected) {
+                    source_panel_body.find("input[type='checkbox']").attr('disabled', false);
+                    source_panel_body.find("textarea").attr('disabled', true);
+                    source_panel_body.find("textarea").html('123');
+                }
+                else if (checked_num == max_selected) {
                     source_panel_body.find("input[type='checkbox']").attr('disabled', true);
-
-                    if (source_panel_body.find("input[type='checkbox']:checked").length >= '{{max_selected}}') {
-                        source_panel_body.find("input[type='checkbox']:checked").attr('disabled', false);
-                    }
-                    else {
-                        source_panel_body.find("input[type='checkbox']").attr('disabled', false);
-                    }
-                 }
-
-                if('{{min_selected}}' != 'None' && '{{min_selected}}' != '') {
-
-                    source_panel_body.find("textarea").html('');
-                    source_panel_body.find("textarea").attr('disabled', false);
-
-                    if (source_panel_body.find("input[type='checkbox']:checked").length >= '{{min_selected}}') {
-                        source_panel_body.find("textarea").attr('disabled', true);
-                        source_panel_body.find("textarea").html('123');
-                    }
-
+                    source_panel_body.find("input[type='checkbox']:checked").attr('disabled', false);
+                    source_panel_body.find("textarea").attr('disabled', true);
+                    source_panel_body.find("textarea").html('123');
                 }
                 else {
+                    source_panel_body.find("textarea").html('');
+                    source_panel_body.find("textarea").attr('disabled', false);
+                }
 
-                     source_panel_body.find("textarea").attr('disabled', true);
-                     source_panel_body.find("textarea").html('123');
+            });
+
+            $("input").on('ifUnchecked', function(event){
+               
+                var source_panel_body = $(this).parent().parent().parent().parent().parent();
+                var min_selected = source_panel_body.find("input[name='min_selected']").val();
+                var max_selected = source_panel_body.find("input[name='max_selected']").val();
+                var qst_must = source_panel_body.find("input[name='qst_must']").val();
+                if (min_selected == 'None' || min_selected == '')
+                    min_selected = 0;
+                if (max_selected == 'None' || max_selected == '')
+                    max_selected = 1000;
+                if(qst_must == 'true')
+                    min_selected = 1;
+
+                var checked_num = source_panel_body.find("input[type='checkbox']:checked").length;
+                if(checked_num <= max_selected && checked_num >= min_selected) {
+                    source_panel_body.find("input[type='checkbox']").attr('disabled', false);
+                    source_panel_body.find("textarea").attr('disabled', true);
+                    source_panel_body.find("textarea").html('123');
+                }
+                else {
+                    source_panel_body.find("textarea").html('');
+                    source_panel_body.find("textarea").attr('disabled', false);
                 }
             });
-        //    alert("input[name='qst{{ questions_id }}']");
 
         });
     </script>
