--- a/src/interface/templates/questionnaire/questionnaire.html
+++ b/src/interface/templates/questionnaire/questionnaire.html
@@ -83,7 +83,7 @@
                     'fillin_check': '{{ qst.check }}'
 
                 }
-            //    alert("fillin_id: " + "{{ fillin_id }}" + '.');
+            //    alert("{{ qst.min_selected }}" + '.');
                 loadContentOn($(".last-question"), "{% url 'questionnaire/publish_qst' type act_id%}", pre_info_param, {anim: false, scroll: false});
                 $(".last-question").removeClass("last-question");
                 $(".questions-list").append('<li class="question last-question">\
