--- a/src/interface/templates/questionnaire/questionnaire_success.html
+++ b/src/interface/templates/questionnaire/questionnaire_success.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>注册用户登陆</title>
+<title>问卷填写成功</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
