--- a/src/interface/templates/questionnaire/questionnaire.html
+++ b/src/interface/templates/questionnaire/questionnaire.html
@@ -73,16 +73,18 @@
 
                     'fillin_id': '{{ fillin_id }}',
 
+
                     'qst_must': '{{ qst.qst_must }}',
                     'min_selected': '{{ qst.min_selected }}',
                     'max_selected': '{{ qst.max_selected }}',
 
                     'display_vote': '{{ qst.display_vote }}',
                     'ip_times': '{{ qst.ip_times }}',
-                    'day_times': '{{ qst.day_times }}'
+                    'day_times': '{{ qst.day_times }}',
+                    'fillin_check': '{{ qst.check }}'
 
                 }
-            //    alert("fillin_id: " + "{{ fillin_id }}" + '.');
+                //alert("fillin_check: " + "{{ qst.check }}" );
                 loadContentOn($(".last-question"), "{% url 'questionnaire/publish_qst' type act_id%}", pre_info_param, {anim: false, scroll: false});
                 $(".last-question").removeClass("last-question");
                 $(".questions-list").append('<li class="question last-question">\
@@ -108,17 +110,13 @@
     });
 
 
-    function checkform() {
-        getTime();
-        getIpPlace();
-    }
-
     function getTime()
     {
         var time = getDetailTime();
         var timeSubmit = $("#questionnaire_content").find("#submitTime");
         timeSubmit.val(time);
         //alert(time);
+        getIpPlace();
     }
     $("#questionnaire_content").ready(function () {
 
