--- a/src/interface/templates/legalUser/design/modal/mark_modal.html
+++ b/src/interface/templates/legalUser/design/modal/mark_modal.html
@@ -217,6 +217,7 @@
     }
 
     modal.ready(function () {
+        reloadID();
         var source_panel_body = $("#qst{{ id }}");
         title_field.val(source_panel_body.find("#mark_title").text().trim());
         option_field1.val(source_panel_body.find("#optionsCheckbox1").parent().parent().prev().prev().prev().html().trim());
